--- a/module3/style.css
+++ b/module3/style.css
@@ -46,7 +46,7 @@
   text-align: center;
   color: #ff4532;
   font-size: 50px;
-  font-family: "Comic Sans MS", cursive, sans-serif;
+  font-family: "sans-serif", cursive, sans-serif;
   font-weight: bold;
 }
 
@@ -82,7 +82,7 @@ li{
 	height: auto;
 	color: black;
 	background-color: rgba(0,0,0,0.2);
-	font-family: "Comic Sans MS", cursive, sans-serif;
+	font-family: "sans-serif", cursive, sans-serif;
 	padding: 20px;
 }
 
